IGNITE-16892 commitWrite on replicas fixed.